--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
 		<java-cfenv-boot.version>2.4.0</java-cfenv-boot.version>
 		<notifications-java-client.version>3.17.3-RELEASE</notifications-java-client.version>
 		<poi-ooxml.version>5.2.2</poi-ooxml.version>
+		<xerces.xercesimpl.version>2.12.2</xerces.xercesimpl.version>
+		<snakeyaml.version>1.32</snakeyaml.version>
+		<spring-security-oauth2-client.version>5.7.5</spring-security-oauth2-client.version>
+		<spring-security-web.version>5.7.5</spring-security-web.version>
+		<h2database.version>2.1.214</h2database.version>
+
 	</properties>
 
 	<dependencies>
@@ -132,7 +138,7 @@
 		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
-			<version>1.32</version>
+			<version>${snakeyaml.version}</version>
 		</dependency>
 
 		<dependency>
@@ -150,7 +156,7 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
-			<version>2.1.214</version>
+			<version>${h2database.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -220,27 +226,21 @@
 			<version>${poi-ooxml.version}</version>
 		</dependency>
 
-
-
-		<!-- https://mvnrepository.com/artifact/xerces/xercesImpl -->
 		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
-			<version>2.12.2</version>
+			<version>${xerces.xercesimpl.version}</version>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-oauth2-client</artifactId>
-			<version>5.7.5</version>
+			<version>${spring-security-oauth2-client.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>5.7.5</version>
+			<version>${spring-security-web.version}</version>
 		</dependency>
-
 
 		<!-- Test dependencies -->
 		<dependency>
@@ -264,7 +264,6 @@
 			<artifactId>junit-jupiter-params</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 	</dependencies>
 
 	<build>
