--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.5</version>
+        <version>3.1.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>uk.gov.crowncommercial.dts</groupId>
@@ -41,7 +41,6 @@
         <junit.version>5.9.3</junit.version>
         <opensearch.version>1.2.0</opensearch.version>
         <shedlock.version>5.6.0</shedlock.version>
-        <spring-boot.version>3.1.5</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -77,7 +76,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -375,7 +373,7 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>https://api.crowncommercial.gov.uk/user-profiles/swagger/v1/swagger.json</inputSpec>
+                            <inputSpec>https://tst.api.crowncommercial.gov.uk/user-profiles/swagger/v1/swagger.json</inputSpec>
                             <generatorName>spring</generatorName>
                             <generateModels>true</generateModels>
                             <generateSupportingFiles>false</generateSupportingFiles>
